# gxml

./: .gitignore  CMakeLists.txt  README.md  build_native.py  pyproject.toml  setup.py  setup_c_profiler.py  setup_c_solvers.py  setup_vec3.py
.github/: copilot-instructions.md
docs/: c_extension_architecture.md  geometry_pipeline_optimization.md
misc/: gxml.xsd  test.gxml
scripts/: benchmark.py
src/gxml/: __init__.py  backend.py  gxml_engine.py  gxml_layout.py  gxml_parser.py  gxml_parsing_utils.py  gxml_profile.py  gxml_render.py  gxml_types.py  native_loader.py
src/gxml/elements/: __init__.py  gxml_base_element.py  gxml_panel.py  gxml_point.py  gxml_polygon.py  gxml_quad.py  gxml_root.py
src/gxml/elements/solvers/: __init__.py  _c_solvers.c  c_solver_wrapper.py  fast_mesh_builder.py  fast_mesh_builder_v2.py  gxml_bounds_solver.py  gxml_face_solver.py  gxml_geometry_builder.py  gxml_gpu_geometry_builder.py  gxml_intersection_solver.py
src/gxml/elements/solvers/gpu/: __init__.py  metal_geometry.py  shader_backend.py  taichi_geometry.py
src/gxml/elements/solvers/native/c/wasm/: solvers.c
src/gxml/elements/solvers/native/shaders/: intersection_solver.metal  intersection_solver.wgsl
src/gxml/elements/solvers/taichi/: __init__.py  taichi_face_solver.py  taichi_geometry_builder.py  taichi_intersection_solver.py
src/gxml/gpu/: __init__.py  metal_geometry.py  shader_backend.py  taichi_geometry.py
src/gxml/layouts/: gxml_base_layout.py  gxml_construct_layout.py  gxml_fixed_layout.py  gxml_stack_layout.py
src/gxml/mathutils/: __init__.py  _vec3.c  gxml_math.py  gxml_quad.py  gxml_ray.py  gxml_transform.py  quad_interpolator.py  vec3.py
src/gxml/profiling/: __init__.py  _c_profile.c  _native_profiler_backend.py  _profiler_backend.py  benchmark.py  profile.py  runner.py
src/gxml/profiling/native/c/: profiler.c
src/gxml/render_engines/: base_render_context.py  binary_render_context.py  dict_render_context.py  indexed_render_context.py  json_render_context.py
src/gxml/shaders/: intersection_solver.hlsl
src/gxml/tests/: generate_test_xml.py  test.xml
src/gxml/tests/integration/: test_integration_panel_intersection.py_OLD  test_integration_panel_positioning.py
src/gxml/tests/test_fixtures/: base_integration_test.py
src/gxml/tests/unit/: __init__.py  test_unit_geometry_builder.py  test_unit_layout.py  test_unit_panel.py  test_unit_parser.py
temp/: batch_intersection_prototype.py  bench_75panel_quick.py  bench_7panel.py  bench_backend_comparison.py  bench_c_pipeline.py  bench_gpu.py  bench_optimized_transform.py  bench_taichi_metal.py  bench_taichi_solvers.py  bench_taichi_vs_cpu.py  bench_transform_breakdown.py  bench_transform_simple.py  bench_vec3_overhead.py  bench_vec3_vs_tuple.py  benchmark_75panel.py  benchmark_c_ext.py  benchmark_c_extension.py  benchmark_cpu_vs_taichi.py  benchmark_full_pipeline.py  benchmark_numpy.py  c_extension_analysis.py  check_benchmark.py  count_numpy_arrays.py  count_transforms.py  count_transforms2.py  count_vec3.py  debug_allclose.py  debug_endpoints.py  debug_grid.py  debug_intersections.py  debug_metal.py  debug_metal2.py  debug_quad_types.py  debug_render.py  debug_rot.py  debug_rot2.py  debug_span.py  debug_thickness.py  debug_transform.py  final_benchmark.py  (+27 more)
tests/: conftest.py  generate_test_xml.py
tests/helpers/: assertions.py  mocks.py  perf_test_utils.py  xml_integration_test_tools.py
tests/integration/: __init__.py  test_integration_panel_basic.py  test_integration_panel_geometry.py  test_integration_panel_intersections.py  test_integration_panel_layout.py  test_integration_panel_positioning.py  test_integration_performance.py
tests/performance/: __init__.py  test_perf_pipeline.py
tests/performance/xml/: 1000Panels.xml  16Panels.xml  200Panels.xml  500Panels.xml  75Panels.xml  7Panels.xml
tests/test_fixtures/: __init__.py  assertions.py  mocks.py  profiling.py  xml_integration_test_tools.py
tests/unit/: test_gxml_profile.py  test_unit_attachment_schema.py  test_unit_face_solver_s_splits.py  test_unit_geometry_builder.py  test_unit_intersection_solver.py  test_unit_layout.py  test_unit_math.py  test_unit_panel.py  test_unit_parser.py  test_unit_polygon.py
