[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gxml"
version = "0.1.0"
description = "A Python library for geometric XML layout and panel intersection solving"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["geometry", "layout", "xml", "panels", "intersection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "lxml>=4.9.0",  # XSD schema validation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "numpy>=1.20.0",  # Used in tests for convenient array assertions
]

[project.urls]
Homepage = "https://github.com/yourusername/gxml"
Repository = "https://github.com/yourusername/gxml"
Issues = "https://github.com/yourusername/gxml/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gxml = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
